    - [performance] Add leaf cache. (diewald)

0.64.5 2025-12-03
    - [maintenance] Update to Java 21 (diewald)
    - [enhancement] Alter vcNamePattern to allow system VC names with less 
      than 3 characters (margaretha)
    - [bugfix] Making totalResult counter long to prevent overflows (diewald)
    - [bugfix] Do not allow optional Lucene Regex extensions (diewald)
    - [bugfix] Fix right context in token list retrieval (#141; diewald)

0.64.4 2025-09-17
    - [feature] Added --progress option to Krill-Indexer (kupietz)
    - [bugfix] Fixed vc cache tests (kupietz)
    - [security] Dependencies updated (diewald, margaretha, kupietz)
    - [enhancement] Keep corpus or collection node name from json (margaretha) 

0.64.3 2025-08-19
    - [feature] Add tar and zip archive input support to Krill-Indexer (kupietz)
    - [security] Update dependencies (kupietz)
    - [enhancement] Add support for "corpus" in deserialization, "collection" 
      is marked as legacy (margaretha). 

0.64.2 2025-07-02
    - [bugfix] Restore rewrites in Meta. (diewald)
    - [bugfix] Fixed deadlock on synchronized vcToCleanUp. (margaretha)

0.64.1 2025-05-26
    - [bugfix] Ignore line endings in indexer tests. (diewald)
    - [bugfix] Correctly cleanup test directories. (diewald)

0.64.0 2025-04-30
    - [feature] Support signed matchids to prevent consecutive
      positional requests (diewald)
    - [feature] Add support for krill.index.textSize.max (kupietz)

0.63.3 2024-12-15
    - [performance] Improve short circuit on count=0 and
      cutoff=true (diewald)
    - [feature] Make defaultSearchContextLength and maxCharContextSize 
      customizable (margaretha)
    - [feature] Support comparison of integer values
      (diewald & kupietz)

0.63.2 2024-08-02
    - [bugfix] Fix empty DocIdSetIterator (margaretha)
    - [bugfix] Don't throw warnings on expansion failure (diewald)

0.63.1 2024-08-02
    - [feature] Add fields array to matches in search responses (diewald)