@@ -1,4 +1,5 @@
     - [performance] Add leaf cache. (diewald)
+    - [bugfix] Fix fingerprinter (wasn't threadsafe; diewald)
 
 0.64.5 2025-12-03
     - [maintenance] Update to Java 21 (diewald)
